--- a/IoTDeviceSimulation.csproj
+++ b/IoTDeviceSimulation.csproj
@@ -16,5 +16,6 @@
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.3" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Scrutor" Version="5.0.1" />
     </ItemGroup>
 </Project>
