returned to old state

--- a/IoTDeviceSimulation.csproj
+++ b/IoTDeviceSimulation.csproj
@@ -18,4 +18,8 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Scrutor" Version="5.0.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Metrics\Update\MetricUpdateOptionsSubscriber.cs" />
+    </ItemGroup>
 </Project>
