added mqtt auto client and mqtt actuator

--- a/IoTDeviceSimulation.AutoMqttClient/IoTDeviceSimulation.AutoMqttClient.csproj
+++ b/IoTDeviceSimulation.AutoMqttClient/IoTDeviceSimulation.AutoMqttClient.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="MQTTnet.Server" Version="5.0.0.1214-RC" />
+      <PackageReference Include="MQTTnet" Version="5.0.0.1214-RC" />
     </ItemGroup>
 
 </Project>
