--- a/IotDeviceSimulation/IoTDeviceSimulation.csproj
+++ b/IotDeviceSimulation/IoTDeviceSimulation.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.0-rc1" />
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.2.0-rc1" />
+        <PackageReference Include="Google.Cloud.Firestore" Version="3.9.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="MQTTnet" Version="5.0.0.1214-RC" />
         <PackageReference Include="Scrutor" Version="5.0.1" />
